--- a/CourseNotes.ipynb
+++ b/CourseNotes.ipynb
@@ -105,6 +105,83 @@
     "You can use this tool to check the contents of a database `python manage.py shell`  it constructs a command line interface with an awareness of the project and database so you can directly query and even add to the database from the command line. \n",
     "`Notes.objects.all()` will return a list of all the objects in the database called Notes.  Other methods in the database objects available will filter including or excluding content. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Base Template #\n",
+    "Code you want on all the rendered HTML pages should appear in a base template rather than adding it to each template that generates a specific page for your site.  Django is accustomed to finding such a template (called `base.html`) in a template folder under a static folder, where' you'd also put CSS and other assets to be made available to all your rendered pages."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here is an example base.html template:\n",
+    "```\n",
+    "{% load static %}\n",
+    "<html>\n",
+    "    <head>\n",
+    "        <link rel=\"stylesheet\" type=\"text/css\" href=\"{% static 'css/style.css' %}\" />\n",
+    "    </head>\n",
+    "\n",
+    "    <body>\n",
+    "        {% block content %}\n",
+    "        {% endblock %}\n",
+    "    </body>\n",
+    "</html>\n",
+    "```\n",
+    "The assumption here is that there's a stylesheet named style.css in a css folder under static and that we desire an injectable object called `content` to which we'll direct the other templates. Those are pointed here with \n",
+    "`{% extends \"base.html\" %}` loaders at the top of each other template. \n",
+    "\n",
+    "It's also important to add the (in this case `static`) folder to the list in the `settings.py` folder where there's a premade list `TEMPLATES` with a sublist for `DIRS` that comes empty. This would be modified as below: "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "TEMPLATES = [\n",
+    "    {\n",
+    "        'BACKEND': 'django.template.backends.django.DjangoTemplates',\n",
+    "        'DIRS': [\n",
+    "            BASE_DIR / 'static/templates',\n",
+    "        ],\n",
+    "        'APP_DIRS': True,\n",
+    "        'OPTIONS': {\n",
+    "            'context_processors': [\n",
+    "                'django.template.context_processors.debug',\n",
+    "                'django.template.context_processors.request',\n",
+    "                'django.contrib.auth.context_processors.auth',\n",
+    "                'django.contrib.messages.context_processors.messages',\n",
+    "            ],\n",
+    "        },\n",
+    "    },\n",
+    "]\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So a template that will leverage a base template already configured and just extend other elements of content as well would be coded as: \n",
+    "```\n",
+    "{% extends \"base.html\" %}\n",
+    "\n",
+    "{% block content %}\n",
+    "    <h1>These are the notes:</h1>\n",
+    "\n",
+    "    <ul> \n",
+    "        {% for note in notes %}\n",
+    "            <li class=\"note-li\">{{note.title}}</li>\n",
+    "        {% endfor %}\n",
+    "    </ul>\n",
+    "{% endblock %}\n",
+    "```\n"
+   ]
   }
  ],
  "metadata": {
