--- a/CourseNotes.ipynb
+++ b/CourseNotes.ipynb
@@ -15,14 +15,14 @@
    "metadata": {},
    "source": [
     "## The path ##\n",
-    "<img src=assets/ThePath.jpg>"
+    "<img src='assets/ThePath.jpg'>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=assets/MVTFramework.jpg>"
+    "<img src='assets/MVTFramework.jpg'>"
    ]
   },
   {
@@ -39,7 +39,7 @@
     "## Migrations ##\n",
     "To keep databases in sync changes are maintained in a `migrations` folder and a `python manage.py migrate` command will synchronize these in the database. \n",
     "\n",
-    "<img src=assets/Migrations.jpg>"
+    "<img src='assets/Migrations.jpg'>"
    ]
   },
   {
@@ -180,8 +180,54 @@
     "        {% endfor %}\n",
     "    </ul>\n",
     "{% endblock %}\n",
-    "```\n"
+    "```\n",
+    "\n",
+    "You will add page specifice CSS to each page's template and CSS that is for the whole site would be on the `base.html` template. \n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **C**reate **R**etrieve **U**pdate **D**elete #\n",
+    "\n",
+    "The CRUD refers to the minimal operations that a model should support.  This involves importing the addtional methods such as CreateView being imported and functions build in the `view.py` and the URL updated in the `urls.py` files. Finally the HTML elements you'll want on the page rendered as part of each operation needs to be created in the `templates` folder.\n",
+    "\n",
+    "For creating content you'll likely want a form.  There's a nuance in Django to prevent improper form submission by requiring a token, called a cross site request forgery token,  with each form to allow Django to ensure the right form is being acted upon. Here's a sample code indicating the call for a token in the action part of the form:\n",
+    "```\n",
+    "<form action=\"{% url 'notes.new' %}\" method='POST'>{% csrf_token %}\n",
+    "    {{ form }}\n",
+    "    <button type=\"submit\" class=\"btn btn-primary my-5\">Submit</button>\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The token is unique to the browser session so even hijacked credentials can't use another browser to intercept the form. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src='assets/CSRF01.jpg'>\n",
+    "<img src='assets/CSRF02.jpg'>\n",
+    "<img src='assets/CSRF03.jpg'>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Model Forms #"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
