Finished through Exercises 0702

--- a/CourseNotes.ipynb
+++ b/CourseNotes.ipynb
@@ -227,7 +227,89 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "A form template that provides the post action (with the anti cross site token) and error handling appears below:\n",
+    "```\n",
+    "<form method='POST'>{% csrf_token %}\n",
+    "    {{ form.as_p }}\n",
+    "    <button type=\"submit\" class=\"btn btn-primary my-5\">Submit</button>\n",
+    "    <a href=\"{% url 'notes.list' %}\" class=\"btn btn-secondary\">Cancel</a>\n",
+    "</form>\n",
+    "{% if form.errors %}\n",
+    "<div class=\"alert alert-danger my-5\">\n",
+    "    {{form.errors.title.as_text}}\n",
+    "</div>\n",
+    "{% endif %}\n",
+    "```\n",
+    "\n",
+    "This would be paired with the form model `forms.py` : \n",
+    "```\n",
+    "from django import forms\n",
+    "from django.core.exceptions import ValidationError\n",
+    "from .models import Notes\n",
+    "\n",
+    "\n",
+    "class NotesForm(forms.ModelForm):\n",
+    "    class Meta:\n",
+    "        model = Notes\n",
+    "        fields = ('title', 'text')\n",
+    "        widgets = {\n",
+    "            'title': forms.TextInput(attrs={'class': 'form-control my-5'}),\n",
+    "            'text': forms.Textarea(attrs={\"class\": \"form-control mb-5\"})\n",
+    "        }\n",
+    "        labels = {\n",
+    "            'text': 'Write your thoughts here:'\n",
+    "        }\n",
+    "\n",
+    "    def clean_title(self):\n",
+    "        title = self.cleaned_data['title']\n",
+    "        if 'Django' not in title:\n",
+    "            raise ValidationError('We only accept notes about Django!')\n",
+    "        return title\n",
+    "```\n",
+    "\n",
+    "and the form view classes that provide the CRUD functions\n",
+    "```\n",
+    "rom typing import List\n",
+    "from django.shortcuts import render\n",
+    "from django.http import Http404\n",
+    "from django.views.generic import CreateView, DetailView, ListView, UpdateView\n",
+    "from django.views.generic.edit import DeleteView\n",
+    "\n",
+    "from .forms import NotesForm\n",
+    "from .models import Notes\n",
+    "\n",
+    "class NotesDeleteView(DeleteView):\n",
+    "    model = Notes\n",
+    "    success_url = '/smart/notes'\n",
+    "    template_name = \"notes/notes_delete.html\"\n",
+    "class NotesUpdateView(UpdateView):\n",
+    "    model = Notes\n",
+    "    success_url = '/smart/notes'\n",
+    "    form_class = NotesForm\n",
+    "class NotesCreateView(CreateView):\n",
+    "    model = Notes\n",
+    "    success_url = '/smart/notes'\n",
+    "    form_class = NotesForm\n",
+    "\n",
+    "class NotesListView(ListView):\n",
+    "    model = Notes\n",
+    "    context_object_name = \"notes\"\n",
+    "    template_name = \"notes/notes_list.html\"\n",
+    "\n",
+    "class NotesDetailView(DetailView):\n",
+    "    model = Notes\n",
+    "    context_object_name = \"note\"\n",
+    "```\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Authentication #"
+   ]
   }
  ],
  "metadata": {
