Through Exercises 8 done.

--- a/CourseNotes.ipynb
+++ b/CourseNotes.ipynb
@@ -308,7 +308,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Authentication #"
+    "# Authentication #\n",
+    "\n",
+    "To support providing information on a user by user basis we have to relate tables to each other.  A foreign key is used, typically a field of both databases that includes a user identifier. There's a built in method `django.contrib.auth.models.user` to do this.  Below we've used that to add a `user` construct that uses the method and we've added as arguments in the method that upon deletion of the use a cascading effect to delete the notes from that user will run.  \n",
+    "\n",
+    "```\n",
+    "from django.db import models\n",
+    "from django.contrib.auth.models import User\n",
+    "\n",
+    "class Notes(models.Model):\n",
+    "    title = models.CharField(max_length=200)\n",
+    "    text = models.TextField()\n",
+    "    created = models.DateTimeField(auto_now_add=True)\n",
+    "    user = models.ForeignKey(User, on_delete=models.CASCADE, related_name=\"notes\")\n",
+    "    \n",
+    "```\n",
+    "\n",
+    "\n",
+    "If you're adding this function to an application that already has content unassigned to a user in the `makemigration` step to use the model you'll have to set a default user, usually \"admin\" and the number is 1. \n",
+    "\n",
+    "Next we have to add the capability to the form to identify and ensure is valid a user.  The following creates an object to be saved to the database (a commit) for the title and text of a note, but as the form will not validate such without a user we first don't commit, then we create the user object and we do commit.  This is the class in the `views.py` file where we create a note:\n",
+    "```\n",
+    "class NotesCreateView(LoginRequiredMixin, CreateView):\n",
+    "    model = Notes\n",
+    "    success_url = '/smart/notes'\n",
+    "    form_class = NotesForm\n",
+    "    login_url = \"/admin\"\n",
+    "\n",
+    "    def form_valid(self, form):\n",
+    "        self.object = form.save(commit=False)\n",
+    "        self.object.user = self.request.user\n",
+    "        self.object.save()\n",
+    "        return HttpResponseRedirect(self.get_success_url())\n",
+    "```\n",
+    "It does the following:\n",
+    "<img src='assets/FormUserValid.jpg'>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You'll have to then add a login page as the built in one works for those with admin rights to Django.  Also you'll have to establish a state of login vice logout in `settings.py` and set up where the user goes after login. \n",
+    "\n",
+    "For the first: `LOGIN_REDIRECT_URL = '/smart/notes'` in the `settings.py`\n"
    ]
   }
  ],
