--- a/CourseNotes.ipynb
+++ b/CourseNotes.ipynb
@@ -353,6 +353,85 @@
     "\n",
     "For the first: `LOGIN_REDIRECT_URL = '/smart/notes'` in the `settings.py`\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The libraries for Django have methods that you simply call to have them render the appropriate, for instance, user registration form. \n",
+    "\n",
+    "Here's the `views.py` code for a registration form:\n",
+    "```\n",
+    "from django.shortcuts import render\n",
+    "from django.http import HttpResponse\n",
+    "from datetime import datetime\n",
+    "from django.views.generic import TemplateView\n",
+    "from django.views.generic.edit import CreateView\n",
+    "from django.contrib.auth.mixins import LoginRequiredMixin\n",
+    "from django.contrib.auth.views import LoginView, LogoutView\n",
+    "from django.contrib.auth.forms import UserCreationForm\n",
+    "\n",
+    "from django.shortcuts import redirect\n",
+    "\n",
+    "\n",
+    "class SignupView(CreateView):\n",
+    "    form_class = UserCreationForm\n",
+    "    template_name = 'home/register.html'\n",
+    "    success_url = '/smart/notes'\n",
+    "\n",
+    "    def get(self, request, *args, **kwargs):\n",
+    "        if self.request.user.is_authenticated:\n",
+    "            return redirect('notes.list')\n",
+    "        return super().get(request, *args, **kwargs)\n",
+    "\n",
+    "\n",
+    "class LoginInterfaceView(LoginView):\n",
+    "    template_name = 'home/login.html'\n",
+    "\n",
+    "\n",
+    "class LogoutInterfaceView(LogoutView):\n",
+    "    template_name = 'home/logout.html'\n",
+    "\n",
+    "```\n",
+    "There's a method, `UserCreationForm` that we import and use by defining it as the class `SignupView` and when we see what's in the template `register.html`  (note that login, logout, register etc should be in Home folder) we see: \n",
+    "```\n",
+    "<form method=\"post\" style='text-align: left; margin: 0 auto; width: 600px;' >{% csrf_token %}\n",
+    "{{form.as_p}}\n",
+    "<input type='submit' class=\"btn btn-secondary\" name='Submit'/>\n",
+    "</form>\n",
+    "```\n",
+    "There's no form HTML here.  It's all inherited from the imported method that `{{form.as_p}}` and then the SignUpView function dumps the user in the smart/notes page. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Last Step #\n",
+    "## The Navigation Bar #"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When all your other pages are done add a navbar to the base.html template so it appears on every page. Here's an example of a nav bar for a signed in user or a non-signed in user to get a different navbar:\n",
+    "```\n",
+    " <nav class=\"navbar navbar-dark bg-dark\">\n",
+    "        <div class=\"'ms-auto\">\n",
+    "          {% if user.is_authenticated %}\n",
+    "            <a href=\"{% url 'logout'%}\" class=\"btn btn-outline-light me-1\">Logout</a>\n",
+    "            <a href=\"{% url 'notes.list'%}\" class=\"btn btn-outline-light me-1\">Home</a>\n",
+    "            <a href=\"{% url 'notes.new'%}\" class=\"btn btn-outline-light me-1\">Create</a>\n",
+    "          {% else %}\n",
+    "            <a href=\"{% url 'login'%}\" class=\"btn btn-outline-light me-1\">Login</a>\n",
+    "            <a href=\"{% url 'signup'%}\" class=\"btn btn-outline-light me-1\">Signup</a>\n",
+    "          {% endif %}\n",
+    "        </div>\n",
+    "      </nav>\n",
+    "      ```\n",
+    "      "
+   ]
   }
  ],
  "metadata": {
